--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "vite": "^7.1.7",
-    "vite-plugin-svg-icons": "^2.0.1"
+    "vite-plugin-svg-sprite": "^0.6.3"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
