--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nike-choes-page",
+  "name": "nike-shoes-page",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,8 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^7.1.7",
-    "vite-plugin-svg-sprite": "^0.6.3"
+    "vite": "^7.1.7"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
